Fixed layout issues and redirrections

--- a/src/main/resources/static/css/components.css
+++ b/src/main/resources/static/css/components.css
@@ -223,7 +223,7 @@
 }
 
 .navbar-dark {
-    background-color: #343a40;
+    background: linear-gradient(45deg, #282828, #212121);
 }
 
 /* Back to home link */
