--- a/src/main/resources/static/css/pages/login.css
+++ b/src/main/resources/static/css/pages/login.css
@@ -1,4 +1,7 @@
 /* Specific styles for the login page */
+body {
+    display: flex;
+}
 
 .login-container {
     width: 100%;
