--- a/src/main/resources/static/css/pages/message.css
+++ b/src/main/resources/static/css/pages/message.css
@@ -1,3 +1,7 @@
+body {
+    display: flex;
+}
+
 .message-container {
     width: 100%;
     max-width: 600px;
