--- a/src/main/resources/static/css/pages/signup.css
+++ b/src/main/resources/static/css/pages/signup.css
@@ -1,4 +1,6 @@
-/* Specific styles for the signup page */
+body {
+    display: flex;
+}
 
 .signup-container {
     width: 100%;
