--- a/src/main/resources/static/css/pages/sponsor.css
+++ b/src/main/resources/static/css/pages/sponsor.css
@@ -7,7 +7,7 @@
 
 /* Header styling */
 .sponsors-header {
-    background-color: #0d6efd;
+    background: linear-gradient(135deg, #2979ff, #434ea5);
     color: white;
     padding: 120px 0 70px;
     margin-bottom: 30px;
